[project]
name = "metal-pitch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "basic-pitch[onnx,tf]>=0.4.0",
    "demucs==4.0.1",
    "music21==9.9.1",
    "neural-amp-modeler==0.12.2",
    "numpy>=1.20,<2",
    "onnxruntime==1.19.2",
    "scikit-learn==1.5.1",
    "setuptools>=82.0.1",
    "soundfile>=0.13.1",
    "torch==2.4.0",
    "torchaudio==2.4.0",
]
